<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.omjee.quizapp.MainActivity">


    <EditText
        android:id="@+id/name_editText"
        style="@style/Edit_text_styling"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_name"
        android:inputType="textCapWords" />

    <EditText
        android:id="@+id/age_editText"
        style="@style/Edit_text_styling"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_age"
        android:inputType="number" />

    <EditText
        style="@style/Edit_text_styling"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_qualifications" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            style="@style/Edit_text_styling"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/instructions" />
    </ScrollView>

    <CheckBox
        android:id="@+id/checkBox_instructions"
        style="@style/Edit_text_styling"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/checkBox_field"
        android:paddingStart="15dp"/>

    <Button
        android:onClick="checkBox_validation"
        android:id="@+id/yes_continue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="#EF6C00"
        android:text="@string/yes_Continue" />
</LinearLayout>


